# SB1_diplom

./: .env sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
announcements/: admin.py  models.py  paginators.py  serializers.py  tests.py  urls.py  views.py
announcements/migrations/: 0001_initial.py
announcements/tests/: test_.py
config/: settings.py  urls.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/: email_user.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
