[tool.poetry]
name = "sb1-diplom"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
drf-yasg = "^1.21.8"
djangorestframework-simplejwt = "^5.4.0"
django-celery-beat = "^2.7.0"
django-cors-headers = "^4.7.0"
djangorestframework = "^3.15.2"
django-filter = "^25.1"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
